[gd_scene load_steps=5 format=3 uid="uid://jhdlqsokif5o"]

[ext_resource type="Script" uid="uid://dlxlkxwbdq3pq" path="res://scripts/ui/lobby/lobby.gd" id="1_jekxk"]
[ext_resource type="Theme" uid="uid://bgj72vffexht" path="res://assets/styles/panel_theme.tres" id="2_i6yme"]
[ext_resource type="Script" uid="uid://boq3i75yls51h" path="res://scripts/ui/ingame_ui/se_button.gd" id="3_i6yme"]
[ext_resource type="AudioStream" uid="uid://bsv6xvb7bqh1h" path="res://sound/mus/config_dragoon_cafe.ogg" id="4_2tt0b"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource("1_jekxk")

[node name="Connect" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.0
offset_top = -83.0
offset_right = 139.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
theme = ExtResource("2_i6yme")

[node name="NameLabel" type="Label" parent="Connect"]
layout_mode = 0
offset_left = 14.0
offset_top = 11.0
offset_right = 56.0
offset_bottom = 25.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Name:"

[node name="Name" type="LineEdit" parent="Connect"]
layout_mode = 0
offset_left = 17.0
offset_top = 38.0
offset_right = 173.0
offset_bottom = 69.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Dragoon"

[node name="IPLabel" type="Label" parent="Connect"]
layout_mode = 0
offset_left = 15.0
offset_top = 74.0
offset_right = 57.0
offset_bottom = 97.0
size_flags_horizontal = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 16
text = "IP:"

[node name="IPAddress" type="LineEdit" parent="Connect"]
layout_mode = 0
offset_left = 17.0
offset_top = 102.0
offset_right = 173.0
offset_bottom = 133.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "127.0.0.1"

[node name="Host" type="Button" parent="Connect" groups=["ui_button"]]
layout_mode = 0
offset_left = 181.0
offset_top = 38.0
offset_right = 251.0
offset_bottom = 76.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Host"
script = ExtResource("3_i6yme")
metadata/_custom_type_script = "uid://boq3i75yls51h"

[node name="Join" type="Button" parent="Connect" groups=["ui_button"]]
layout_mode = 0
offset_left = 181.0
offset_top = 102.0
offset_right = 246.0
offset_bottom = 140.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Join"
script = ExtResource("3_i6yme")
metadata/_custom_type_script = "uid://boq3i75yls51h"

[node name="ErrorLabel" type="Label" parent="Connect"]
layout_mode = 0
offset_left = 15.0
offset_top = 138.0
offset_right = 257.0
offset_bottom = 161.0
size_flags_horizontal = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.820312, 0.291595, 0.291595, 1)

[node name="ErrorDialog" type="AcceptDialog" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_2tt0b")
autoplay = true
bus = &"Music"
parameters/looping = true

[connection signal="pressed" from="Connect/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Connect/Join" to="." method="_on_join_pressed"]
